--- a/ch9.tex
+++ b/ch9.tex
@@ -419,7 +419,7 @@ $$LL=\sum_{t=1}^T \log P(e_t)$$ is maximized.
 \end{definition}
 \end{frame}
 \begin{frame}
-  \frametitle{PRISM Assumpions}
+  \frametitle{PRISM Assumptions}
 \begin{enumerate}
 \item  the probability of a conjunction
 $(A, B)$ is computed as the product of the probabilities of $A$ and $B$ (\emph{independent-and assumption}), \label{ind}\index{independent-and assumption}
@@ -1006,7 +1006,7 @@ $\ranvar{X}_{ij1},\ldots,\ranvar{X}_{ijn-1}.$
 \begin{eqnarray*}
 P(\ranvar{X}_{ij1})&=&P(\ranvar{X}_{ij}=1)\\
 &\ldots&\\
- P(\ranvar{X}_{ijk})&=&\frac{P(\ranvar{X}_{ij}=k)}{\prod_{l=1}^{k-1}(1-P(\ranvar{X}_{ijk-1}))}
+ P(\ranvar{X}_{ijk})&=&\frac{P(\ranvar{X}_{ij}=k)}{\prod_{l=1}^{k-1}(1-P(\ranvar{X}_{ijl}))}
  \end{eqnarray*}
  \end{itemize}
 \end{frame}
